<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_817de06579ebfc8966ab54a8267f991"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:paddingTop="35dp"
        android:text="Song ID"
        android:textColor="#914110" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/title"
        android:textColor="#914110" />

    <EditText
        android:id="@+id/etST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_music_note_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/exo_medium"
        android:hint="@string/songTitle"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#532200"
        android:textColorHint="#532200" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/singer"
        android:textColor="#914110" />

    <EditText
        android:id="@+id/etSN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_people_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/exo_medium"
        android:hint="@string/singerName"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#532200"
        android:textColorHint="#532200" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/years"
        android:textColor="#914110" />

    <EditText
        android:id="@+id/etYr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_today_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/exo_medium"
        android:hint="@string/year"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#532200"
        android:textColorHint="#532200" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/star"
        android:textColor="#914110" />

    <RadioGroup
        android:id="@+id/rgStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/oneStar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:text="@string/stars1"
            android:textColor="#532200" />

        <RadioButton
            android:id="@+id/twoStars"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:text="@string/stars2" />

        <RadioButton
            android:id="@+id/threeStar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:text="@string/stars3"
            android:textColor="#532200" />

        <RadioButton
            android:id="@+id/fourStars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:text="@string/stars4"
            android:textColor="#532200" />

        <RadioButton
            android:id="@+id/fiveStars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_bold"
            android:text="@string/stars5" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#391700"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#391700"
            android:text="@string/btnDelete" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#391700"
        android:text="@string/btnCancel" />
</LinearLayout>